# CRAFT_Disputes

./: .gitignore  .readthedocs.yaml  README.md  conf.py  extra.txt  main.py  mlflow.db  pyproject.toml  test.py
Tests/: test_data.py
craft_disputes.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: conf.py
model/: config.py  data.py  model.py
nn_preprocessing/custom/: index2word.json
src/: train_fine_tuning_model.py
src/craft/: __init__.py
src/craft/data/nn_input_data/custom/: train_processed_dialogs_testing.txt
src/craft/data/nn_preprocessing/custom/: word2index.json
src/craft/experiments/test_1fold_ALL_KODIS_downsampling_no_scheduling/config/: config.txt
src/craft/experiments/test_1fold_ALL_KODIS_downsampling_no_scheduling/fold_1/training/: epoch_metrics.txt
src/craft/model/: data.py  optimizer.py
src/craft/runners/: pretrain.py  raytune.py
src/craft/tests/: finetune_test.py
src/craft/utils/: corpus_utils.py  data_processing.py  file_utils.py  finetune_utils.py  plotting_utils.py  pretrain_utils.py
src/docs/: index.rst
src/experiments/test/config/: config.txt
src/experiments/test/fold_1/training/: batch_metrics.txt  epoch_metrics.txt
src/experiments/test/training/: avg_metrics.txt
src/experiments/test_1fold_ALL_KODIS_downsampling_no_scheduling/fold_1/training/: batch_metrics.txt
src/experiments/test_1fold_ALL_KODIS_downsampling_no_scheduling/training/: avg_metrics.txt
src/model/: classifiers.py  config.py  data.py  model.py  optimizer.py  unit_test.py  utils.py
src/notebooks/: fine-tuning_testing.ipynb  fine_tuning_demo.ipynb
src/runners/: build_vocabulary_objects.py  finetune.py  raytune.py  train_fine_tuning_model.py
src/tests/: finetune_test.py  pretrain_test.py  pytorch_test.py
src/unit_tests/: pretrain_test.py
src/utils/: corpus_utils.py  data_processing.py  file_utils.py  finetune_utils.py  plotting_utils.py  pretrain_utils.py  raytune_utils.py
