[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "craft-disputes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "bitsandbytes==0.42.0",
  "convokit[craft]>=3.1.0",
  "emoji>=1.7.0",
  "ipykernel>=6.29.5",
  "mlflow>=2.22.0",
  "optuna>=4.3.0",
  "pandas>=2.2.3",
  "pytest>=8.3.5",
  "ray[air,tune]>=2.47.0",
  "sphinx>=8.2.3",
]

[tool.uv]
package = true


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["model", "model.*", "utils", "utils.*"]
exclude = ["nn_input_data*", "nn_preprocessing*"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 99
src = ["src"]
include = ["pyproject.toml", "src/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["model", "utils"]
force-sort-within-sections = true
