[project]
name = "craft"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "mishkin", email = "mlgelman@usc.edu" }
]
requires-python = ">=3.11"
dependencies = [
  "bitsandbytes==0.42.0",
  "convokit[craft]>=3.1.0",
  "emoji>=1.7.0",
  "ipywidgets>=8.1.7",
  "mlflow>=2.22.0",
  "optuna>=4.3.0",
  "pandas>=2.2.3",
  "pytest>=8.3.5",
  "ray[air,tune]>=2.47.0",
  "sphinx>=8.2.3",
  "ipykernel>=6.29.5",
]


[project.scripts]
craft-disputes = "craft:main"

[build-system]
requires = ["uv_build>=0.6.8,<0.7"]
build-backend = "uv_build"


[tool.uv.build-backend]
module-root    = "src"
module-name    = "craft"
